# azer-backend-common

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
azer_common/: README.md
azer_common/config/: base.py
azer_common/configs/: base.py  nacos.py
azer_common/databases/: redis.py  router.py
azer_common/domain/: __init__.py
azer_common/domain/interfaces/: __init__.py
azer_common/exceptions/: global_exc_handler.py
azer_common/middlewares/: limiter.py  logging.py
azer_common/models/: PermissionModels.py  RoleModels.py  UserModels.py  __init__.py  base.py  enums.py  utils.py
azer_common/models/audit/: __init__.py  base.py  context.py  dynamic.py  registry.py  role.py  role_permission.py  signals.py  user_role.py
azer_common/models/auth/: __init__.py  model.py  oauth_connection.py  password_history.py  signals.py
azer_common/models/enums/: __init__.py  base.py
azer_common/models/permission/: __init__.py  model.py
azer_common/models/relations/: __init__.py  role_permission.py  tenant_user.py  user_role.py
azer_common/models/role/: __init__.py  model.py
azer_common/models/tenant/: __init__.py  model.py
azer_common/models/types/: __init__.py  constants.py  enums.py
azer_common/models/user/: __init__.py  model.py  signals.py  status.py
azer_common/repositories/: __init__.py  base.py  base_component.py  base_repository.py
azer_common/repositories/auth/: __init__.py  repository.py
azer_common/repositories/auth/components/: __init__.py  base.py
azer_common/repositories/permission/: __init__.py  repository.py
azer_common/repositories/permission/components/: __init__.py  base.py
azer_common/repositories/role/: repository.py
azer_common/repositories/role/components/: __init__.py  base.py  permission.py
azer_common/repositories/tenant/: repository.py
azer_common/repositories/tenant/components/: __init__.py  base.py  role.py  user.py
azer_common/repositories/user/: __init__.py  repository.py  status.py  user_repository.py
azer_common/repositories/user/components/: __init__.py  base.py  role.py  stats.py  status.py  tenant.py
azer_common/services/: jwt_service.py
azer_common/tasks/: scheduler.py
azer_common/utils/: debug_utils.py  device_info.py  doc_utils.py  inject_config_to_env.py  is_password_hashed.py  path_resolver.py  response.py  setup_custom_openapi.py  time.py  validators.py
