[project]
name = "azer-backend-common"
version = "0.1.0"
description = "Azer microservice common package"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi >=0.123.5",
    "uvicorn >=0.38.0",

    # Security & Cryptography
    "argon2-cffi >=25.1.0",
    "pyjwt >=2.9.0",
    "cryptography >=46.0.3",

    # Database & ORM
    "tortoise-orm >=0.25.0",
    "asyncpg >=0.31.0",
    "aerich >=0.9.2",

    # Caching & Rate Limiting
    "redis >=7.1.0",
    "fastapi-limiter >=0.1.6",

    # Configuration
    "pydantic-settings >=2.12.0",
    "pydantic >=2.11.4",

    # Scheduling
    "apscheduler >=3.10.4",

    # Utilities
    "user-agents >=2.2.0",
    "pyyaml >=6.0.2",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "azer_common"
module-root = "."

[tool.uv]
index = [
    {url = "https://mirrors.aliyun.com/pypi/simple/", priority = 1},
    {url = "https://pypi.org/simple/", priority = 2},
]

[tool.uv.pip]
resolution = "highest"
strict = true