[project]
name = "azer-backend-common"
version = "0.1.0"
description = "Azer microservice common package"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi >=0.123.5",
    "uvicorn >=0.38.0",
    # Security & Cryptography
    "argon2-cffi >=25.1.0",
    "pyjwt >=2.9.0",
    "cryptography >=46.0.3",
    # Database & ORM
    "tortoise-orm >=0.25.0",
    "asyncpg >=0.31.0",
    "aerich >=0.9.2",
    # Caching & Rate Limiting
    "redis >=7.1.0",
    "fastapi-limiter >=0.1.6",
    # Configuration
    "pydantic-settings >=2.12.0",
    "pydantic >=2.11.4",
    # Scheduling
    "apscheduler >=3.10.4",
    # Utilities
    "user-agents >=2.2.0",
    "pyyaml >=6.0.2",
]

[dependency-groups]
dev = [
    # Testing
    "pytest >=9.0.1",
    "pytest-asyncio >=1.3.0",
    "schemathesis >=3.37.0",
    "testcontainers[postgresql,asyncpg]",
    # Code quality
    "ruff >=0.14.7",
    "pylint >=4.0.4",
    "mypy >=1.10.0",
    # Security scanning
    "bandit >=1.7.10",
    "safety >=3.7.0",
    # Development tools
    "toml >=0.10.2",
    "tomlkit >=0.13.2",
    "tabulate >=0.9.0",
    "pyfiglet >=1.0.2",
    # Debugging
    "ipdb >=0.13.13",
]


[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "azer_common"
module-root = "."

[tool.uv]
index = [
    { url = "https://mirrors.aliyun.com/pypi/simple/", priority = 1 },
    { url = "https://pypi.org/simple/", priority = 2 },
]

[tool.uv.pip]
resolution = "highest"
strict = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]